--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bash-git-prompt"]
 	path = bash-git-prompt
 	url = git@github.com:magicmonty/bash-git-prompt.git
+[submodule "kube-ps1"]
+	path = kube-ps1
+	url = git@github.com:jonmosco/kube-ps1.git
