impl: Update scripts

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@ set -g status-right "%H:%M"
 set -g window-status-current-style "underscore"
 
 # Force 256 terminal colors detection
-set -g default-terminal "screen-256color"
+set -g default-terminal "alacritty"
 
 # Change the prefix key to C-a
 set -g prefix C-a
