--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -2,9 +2,6 @@
 set -g status-right "%H:%M"
 set -g window-status-current-style "underscore"
 
-# Force 256 terminal colors detection
-set -g default-terminal "xterm-256color"
-
 # Change the prefix key to C-a
 set -g prefix C-a
 unbind C-b
@@ -34,6 +31,7 @@ bind F12 selectw -t:21
 bind F set -w window-size
 
 # Use Vim mappings
+set-window-option -g mode-keys vi
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -42,6 +40,9 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # switch panes using Alt-arrow without prefix
 bind -n M-h select-pane -L
@@ -55,15 +56,14 @@ bind -n M-Down select-pane -D
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
+# Beware things are set under the hood here! Refer to the plugin github page for a full list
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'arcticicestudio/nord-tmux'
 
-## Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
