--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,51 @@
 [submodule "pfetch"]
-	path = pfetch
+	path = clones/pfetch
 	url = git@github.com:dylanaraps/pfetch.git
 [submodule "nord-dircolors"]
-	path = nord-dircolors
+	path = clones/nord-dircolors
 	url = git@github.com:arcticicestudio/nord-dircolors.git
 [submodule "delta"]
 	path = delta
 	url = git@github.com:dandavison/delta.git
 [submodule "git-secrets"]
-	path = git-secrets
+	path = clones/git-secrets
 	url = git@github.com:awslabs/git-secrets.git
+[submodule "config/vim/vim/pack/plugins/start/lightline.vim"]
+	path = config/vim/pack/plugins/start/lightline
+	url = https://github.com/itchyny/lightline.vim.git
+[submodule "config/vim/vim/pack/plugins/start/fzf.vim"]
+	path = config/vim/pack/plugins/start/fzf
+	url = https://github.com/junegunn/fzf.vim.git
+[submodule "config/vim/vim/pack/plugins/start/nerdtree"]
+	path = config/vim/pack/plugins/start/nerdtree
+	url = https://github.com/preservim/nerdtree.git
+[submodule "config/vim/vim/pack/plugins/start/nerdtree-git-plugin"]
+	path = config/vim/pack/plugins/start/nerdtree-git-plugin
+	url = https://github.com/Xuyuanp/nerdtree-git-plugin.git
+[submodule "config/vim/vim/pack/plugins/start/vim-sensible"]
+	path = config/vim/pack/plugins/start/vim-sensible
+	url = https://github.com/tpope/vim-sensible.git
+[submodule "config/vim/vim/pack/plugins/start/vim-commentary"]
+	path = config/vim/pack/plugins/start/vim-commentary
+	url = https://github.com/tpope/vim-commentary.git
+[submodule "config/vim/vim/pack/plugins/start/vim-surround"]
+	path = config/vim/pack/plugins/start/vim-surround
+	url = https://github.com/tpope/vim-surround.git
+[submodule "config/vim/vim/pack/plugins/start/vim-fugitive"]
+	path = config/vim/pack/plugins/start/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
+[submodule "config/vim/vim/pack/plugins/start/vim-repeat"]
+	path = config/vim/pack/plugins/start/vim-repeat
+	url = https://github.com/tpope/vim-repeat.git
+[submodule "config/vim/vim/pack/plugins/start/coc.nvim"]
+	path = config/vim/pack/plugins/opt/coc
+	url = https://github.com/neoclide/coc.nvim.git
+[submodule "config/vim/vim/pack/plugins/start/nord-vim"]
+	path = config/vim/pack/plugins/start/nord-vim
+	url = https://github.com/arcticicestudio/nord-vim.git
+[submodule "clones/spicetify-themes"]
+	path = clones/spicetify-themes
+	url = https://github.com/morpheusthewhite/spicetify-themes
+[submodule "config/vim/pack/plugins/start/csv.vim"]
+	path = config/vim/pack/plugins/start/csv.vim
+	url = git@github.com:chrisbra/csv.vim.git
