--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,3 +1,6 @@
+# Reload config
+bind r source-file ~/.tmux.conf \; display "TMUX was reloaded!"
+
 # Some tweaks to the status line
 set -g status-right "%H:%M"
 set -g window-status-current-style "underscore"
@@ -67,4 +70,4 @@ set -g @plugin 'arcticicestudio/nord-tmux'
 set -g @plugin 'sainnhe/tmux-fzf'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '$XDG_CONFIG_HOME/tmux/tpm/tpm'
