--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,6 +1,10 @@
 # Reload config
 bind r source-file ~/.tmux.conf \; display "TMUX was reloaded!"
 
+# Set default terminal and allow true colors with gradients
+set -g default-terminal "alacritty"
+set-option -ga terminal-overrides ",alacritty:Tc"
+
 # Some tweaks to the status line
 set -g status-right "%H:%M"
 set -g window-status-current-style "underscore"
