--- a/.gitmodules
+++ b/.gitmodules
@@ -86,3 +86,21 @@
 [submodule "clones/pavucontrol"]
 	path = clones/pavucontrol
 	url = https://gitlab.freedesktop.org/pulseaudio/pavucontrol.git
+[submodule "config/nvim/pack/plugins/start/plenary.nvim"]
+	path = config/nvim/pack/plugins/start/plenary.nvim
+	url = https://github.com/nvim-lua/plenary.nvim.git
+[submodule "config/nvim/pack/plugins/start/nvim-lspconfig"]
+	path = config/nvim/pack/plugins/start/nvim-lspconfig
+	url = https://github.com/neovim/nvim-lspconfig.git
+[submodule "config/nvim/pack/plugins/start/nvim-metals"]
+	path = config/nvim/pack/plugins/start/nvim-metals
+	url = https://github.com/scalameta/nvim-metals.git
+[submodule "config/nvim/pack/plugins/start/nvim-dap"]
+	path = config/nvim/pack/plugins/start/nvim-dap
+	url = https://github.com/mfussenegger/nvim-dap.git
+[submodule "config/nvim/pack/plugins/start/nvim-cmp"]
+	path = config/nvim/pack/plugins/start/nvim-cmp
+	url = https://github.com/hrsh7th/nvim-cmp.git
+[submodule "config/nvim/pack/plugins/start/cmp-nvim-lsp"]
+	path = config/nvim/pack/plugins/start/cmp-nvim-lsp
+	url = https://github.com/hrsh7th/cmp-nvim-lsp.git
