--- a/config/starship/starship.toml
+++ b/config/starship/starship.toml
@@ -8,6 +8,9 @@ scan_timeout = 10
 format = """
 ┌$time\
 $username\
+$kubernetes\
+${custom.sloctl}\
+$aws\
 $directory\
 $git_branch\
 $git_status\
@@ -62,6 +65,6 @@ symbol = "☁️ "
 # Nobl9 specific
 [custom.sloctl]
 description = 'provides current sloctl context'
-command = "cat ~/.config/nobl9/config.toml | tomlq -r .defaultContext"
+command = "awk '/^defaultContext/ {gsub(\"\\\"\", \"\"); print $3}' < ~/.config/nobl9/config.toml"
 format = '[|](#4c566a) [N9](#5E81AC) [$output](#8FBCBB) '
 when = 'true'
