add qtile improvements and xinitrc

--- a/config/flameshot/flameshot.ini
+++ b/config/flameshot/flameshot.ini
@@ -1,8 +1,9 @@
 [General]
 contrastOpacity=188
 drawColor=#BF616A
-savePath=/home/mh/screenshots
+savePath=/home/mh/nobl9
 showHelp=false
+showStartupLaunchMessage=false
 startupLaunch=true
 uiColor=#81A1C1
 userColors=picker, #BF616A, #D08770, #EBCB8B, #A3BE8C, #B48EAD
