--- a/config/qt5ct/qt5ct.conf
+++ b/config/qt5ct/qt5ct.conf
@@ -28,7 +28,7 @@ wheel_scroll_lines=3
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x3p\0\0\0\xc1\0\0\x5\xe8\0\0\x2\xd3\0\0\x3q\0\0\0\xc2\0\0\x5\xe7\0\0\x2\xd2\0\0\0\0\0\0\0\0\x6@\0\0\x3q\0\0\0\xc2\0\0\x5\xe7\0\0\x2\xd2)
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x3&\0\0\x1\xcc\0\0\x6\x35\0\0\x3y\0\0\x3(\0\0\x1\xce\0\0\x6\x33\0\0\x3w\0\0\0\0\0\0\0\0\x6@\0\0\x3(\0\0\x1\xce\0\0\x6\x33\0\0\x3w)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x3\xc6\0\0\x2\x62\0\0\au\0\0\x4\xa5\0\0\x3\xc8\0\0\x2\x64\0\0\as\0\0\x4\xa3\0\0\0\0\0\0\0\0\a\x80\0\0\x3\xc8\0\0\x2\x64\0\0\as\0\0\x4\xa3)
 
 [Troubleshooting]
 force_raster_widgets=1
