--- a/config/flameshot/flameshot.ini
+++ b/config/flameshot/flameshot.ini
@@ -1,7 +1,7 @@
 [General]
 contrastOpacity=188
 drawColor=#BF616A
-savePath=/home/mh/nobl9
+savePath=/home/mh/screenshots
 showHelp=false
 showStartupLaunchMessage=false
 startupLaunch=true
