--- a/config/git/config
+++ b/config/git/config
@@ -44,12 +44,12 @@
   features = side-by-side line-numbers decorations
 	syntax-theme = Nord
   whitespace-error-style = 22 reverse
-	plus-style = "28 bold black"
-	plus-emph-style = "#254117 28"
-	plus-non-emph-style = "28"
-  minus-style = "red bold black"
-	minus-emph-style = "red #800517"
-	minus-non-emph-styl = "red"
+	plus-style = "#8FBCBB bold black"
+	plus-emph-style = "#254117 #8FBCBB"
+	plus-non-emph-style = "#8FBCBB"
+  minus-style = "#D08770 bold black"
+	minus-emph-style = "#D08770 #800517"
+	minus-non-emph-styl = "#D08770"
 
 [delta "decorations"]
 	commit-decoration-style = bold yellow box ul
@@ -60,4 +60,4 @@
 [delta "line-numbers"]
 	line-numbers-zero-style = "#4c566a"
   line-numbers-minus-style = red
-  line-numbers-plus-style = 28
+  line-numbers-plus-style = green
