--- a/config/git/config
+++ b/config/git/config
@@ -1,3 +1,4 @@
+# vim: set sw=2 sts=2 ts=2 noexpandtab :
 [credential]
 	helper = cache
 
@@ -20,6 +21,13 @@
 [merge]
   conflictstyle = diff3
 
+[mergetool]
+	prompt = false
+	keepBackup = false
+
+[mergetool "vimdiff"]
+	cmd = nvim -d $BASE $LOCAL $REMOTE $MERGED -c '$wincmd w' -c 'wincmd J'
+
 [init]
 	defaultBranch = main
 
@@ -32,7 +40,7 @@
 [alias]
   pushf = push --force-with-lease
   tree = log --graph --pretty=format:'%Cblue%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ar) %C(cyan)<%an>%Creset' --abbrev-commit
-  to = checkout
+	pc = pc = !"f() { remote=\"${1:-origin}\"; git push -u \"$remote\" $(git rev-parse --abbrev-ref HEAD); }; f"
 
 [interactive]
   diffFilter = delta --color-only
