further bufferline and neo-tree adjustements

--- a/config/git/config
+++ b/config/git/config
@@ -40,7 +40,7 @@
 [alias]
   pushf = push --force-with-lease
   tree = log --graph --pretty=format:'%Cblue%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ar) %C(cyan)<%an>%Creset' --abbrev-commit
-	pc = pc = !"f() { remote=\"${1:-origin}\"; git push -u \"$remote\" $(git rev-parse --abbrev-ref HEAD); }; f"
+	pc = !"f() { remote=\"${1:-origin}\"; git push -u \"$remote\" $(git rev-parse --abbrev-ref HEAD); }; f"
 
 [interactive]
   diffFilter = delta --color-only
