fix styling for neotree and add trouble

--- a/config/qtile/qtile.desktop
+++ b/config/qtile/qtile.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Qtile
 Comment=Qtile Session
-Exec=/usr/bin/qtile
+Exec=/etc/lightdm/Xsession
 Type=Application
 Keywords=wm;tiling
