--- a/config/qtile/qtile.desktop
+++ b/config/qtile/qtile.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Qtile
 Comment=Qtile Session
-Exec=/etc/lightdm/Xsession
+Exec=qtile start
 Type=Application
 Keywords=wm;tiling
