update font and add new nvim plugins

--- a/config/gtk/settings.ini
+++ b/config/gtk/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Nordic
 gtk-icon-theme-name=Adwaita
-gtk-font-name=mononoki Nerd Font 11
+gtk-font-name=mononoki Nerd Font Mono 11
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
