polish up qtile, add spotify and remove bloat from nvim

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -12,7 +12,7 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 10;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
@@ -35,7 +35,7 @@ shadow-offset-y = -7;
 # shadow-blue = 0
 
 # Hex string color value of shadow (#000000 - #FFFFFF, defaults to #000000). This option will override options set shadow-(red/green/blue)
-# shadow-color = "#000000"
+shadow-color = "#2E3440"
 
 # Specify a list of conditions of windows that should have no shadow.
 #
@@ -45,10 +45,10 @@ shadow-offset-y = -7;
 # shadow-exclude = []
 shadow-exclude = [
   "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
+  # "class_g = 'Conky'",
+  # "class_g ?= 'Notify-osd'",
+  # "class_g = 'Cairo-clock'",
+  # "_GTK_FRAME_EXTENTS@:c"
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
@@ -77,20 +77,20 @@ fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.03;
+fade-in-step = 0.01;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.03;
+fade-out-step = 0.01;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
+fade-delta = 5
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
 
 # Do not fade on window open/close.
-# no-fading-openclose = false
+no-fading-openclose = true
 
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
@@ -132,10 +132,6 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
-#
-opacity-rule = [
-  "90:class_g = 'Alacritty'",
-]
 
 
 #################################
@@ -148,10 +144,10 @@ opacity-rule = [
 corner-radius = 0
 
 # Exclude conditions for rounded corners.
-rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'"
-];
+# rounded-corners-exclude = [
+#   "window_type = 'dock'",
+#   "window_type = 'desktop'"
+# ];
 
 
 #################################
@@ -160,12 +156,12 @@ rounded-corners-exclude = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-blur-method = "dual_kawase";
+# blur-method = "dual_kawase";
 # blur-size = 12
 #
 # blur-deviation = false
 #
-blur-strength = 15
+# blur-strength = 15
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
@@ -407,7 +403,7 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = false; opacity = 0.5; focus = true; full-shadow = false; };
   dock = { shadow = false; clip-shadow-above = true; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 0.8; }
