--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -6,16 +6,13 @@
 # Enabled client-side shadows on windows. Note desktop windows
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
-#
-# shadow = false
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
-# shadow-radius = 12
 shadow-radius = 10;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
+shadow-opacity = 0.75;
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
@@ -25,44 +22,14 @@ shadow-offset-x = -7;
 # shadow-offset-y = -15
 shadow-offset-y = -7;
 
-# Red color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-red = 0
-
-# Green color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-green = 0
-
-# Blue color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-blue = 0
-
-# Hex string color value of shadow (#000000 - #FFFFFF, defaults to #000000). This option will override options set shadow-(red/green/blue)
-shadow-color = "#2E3440"
+# This option will override options set shadow-(red/green/blue)
+shadow-color = "#2E3440";
 
 # Specify a list of conditions of windows that should have no shadow.
-#
-# examples:
-#   shadow-exclude = "n:e:Notification";
-#
-# shadow-exclude = []
 shadow-exclude = [
-  "name = 'Notification'",
-  # "class_g = 'Conky'",
-  # "class_g ?= 'Notify-osd'",
-  # "class_g = 'Cairo-clock'",
-  # "_GTK_FRAME_EXTENTS@:c"
+  "name = 'cpt_frame_xcb_window'",
+  "class_g ?= 'zoom'",
 ];
-
-# Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
-# clip-shadow-above = []
-
-# Specify a X geometry that describes the region in which shadow should not
-# be painted in, such as a dock window region. Use
-#    shadow-exclude-reg = "x10+0+0"
-# for example, if the 10 pixels on the bottom of the screen should not have shadows painted on.
-#
-# shadow-exclude-reg = ""
-
-# Crop shadow of a window fully on a particular Xinerama screen to the screen.
-# xinerama-shadow-crop = false
 
 
 #################################
@@ -72,22 +39,22 @@ shadow-exclude = [
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-# fading = false
 fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-# fade-in-step = 0.028
 fade-in-step = 0.01;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
-# fade-out-step = 0.03
 fade-out-step = 0.01;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 fade-delta = 5
 
 # Specify a list of conditions of windows that should not be faded.
-# fade-exclude = []
+fade-exclude = [
+  "class_g ?= 'zoom'",
+  "class_g = 'Alacritty'",
+]
 
 # Do not fade on window open/close.
 no-fading-openclose = true
@@ -102,26 +69,19 @@ no-fading-openclose = true
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
-inactive-opacity = 0.8;
+inactive-opacity = 1.0;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 1.0
-frame-opacity = 0.9;
+frame-opacity = 1.0;
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
-# inactive-opacity-override = true
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-# active-opacity = 1.0
-
-# Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-# inactive-dim = 0.0
+active-opacity = 1.0
 
 # Specify a list of conditions of windows that should never be considered focused.
-# focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
+# focus-exclude = [];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -131,7 +91,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Note we don't make any guarantee about possible conflicts with other
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
-#    opacity-rule = [ "80:class_g = 'URxvt'" ];
+# opacity-rule = [ "100:class_g ?= 'zoom'" ];
 
 
 #################################
@@ -148,7 +108,6 @@ corner-radius = 0
 #   "window_type = 'dock'",
 #   "window_type = 'desktop'"
 # ];
-
 
 #################################
 #     Background-Blurring       #
@@ -194,7 +153,8 @@ blur-kern = "3x3box";
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "class_g ?= 'zoom'",
+  "_GTK_FRAME_EXTENTS@:c",
 ];
 
 #################################
@@ -236,8 +196,8 @@ detect-rounded-corners = true;
 # Detect '_NET_WM_WINDOW_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_WINDOW_OPACITY' of client windows to frame windows.
 #
-# detect-client-opacity = false
-detect-client-opacity = true;
+detect-client-opacity = false
+# detect-client-opacity = true;
 
 # Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
