--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -141,7 +141,7 @@ font:
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
   offset:
     x: 1
-    y: 1
+    y: 4 # Easier for me to discern lines.
 
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increasing `x` moves the glyph to the right,
