--- a/config/flameshot/flameshot.ini
+++ b/config/flameshot/flameshot.ini
@@ -1,6 +1,7 @@
 [General]
 contrastOpacity=188
-drawColor=#BF616A
+drawColor=#bf616a
+saveAfterCopy=true
 savePath=/home/mh/screenshots
 showHelp=false
 showStartupLaunchMessage=false
