--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -96,7 +96,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: mononoki Nerd Font Mono
+    family: mononoki Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Regular
