--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,18 +1,36 @@
-- shell:
-  - [git submodule update --init --recursive --remote, Installing submodules]
+- defaults:
+    link:
+      create: true
+      relink: true
+      force: true
+    shell:
+      stdout: true
+      stderr: true
 
 - link:
   ~/.bashrc: ./config/bash/bashrc
   ~/.bash_logout: ./config/bash/bash_logout
   ~/.bash_profile: ./config/bash/bash_profile
-  ~/.config/starship.toml: ./config/starship/starship.toml
-  ~/.config/qtile: ./config/qtile
   ~/.xprofile: ./config/xorg/xprofile
   ~/.xinitrc: ./config/xorg/xinitrc
   ~/.Xresources: ./config/xorg/Xresources
-  ~/.config/systemd/user/ssh-agent.service:
-    path: ./config/systemd/ssh-agent.service
-    create: true
+  ~/.config/systemd/user/ssh-agent.service: ./config/systemd/ssh-agent.service
+
+- shell:
+  - [make install/nix, Installing nix manager]
+  - [make install/home-manager, Installing home manager]
+
+- link:
+  ~/.config/nix: ./config/nix
+
+- shell:
+  - [make install/lvim, Installing LunarVim]
+  - [make install/slock, Installing slock lock screen]
+  - [make xdg/defaults, Setting xdg-mime defaults]
+
+- link:
+  ~/.config/starship.toml: ./config/starship/starship.toml
+  ~/.config/qtile: ./config/qtile
   ~/.config/rofi: ./config/rofi
   ~/.config/lvim: ./config/lvim
   ~/.config/alacritty: ./config/alacritty
