--- a/config/qt5ct/qt5ct.conf
+++ b/config/qt5ct/qt5ct.conf
@@ -3,7 +3,7 @@ color_scheme_path=/home/mh/.config/qt5ct/colors/nordic.conf
 custom_palette=true
 icon_theme=Adwaita
 standard_dialogs=gtk3
-style=kvantum-dark
+style=Fusion
 
 [Fonts]
 fixed=@Variant(\0\0\0@\0\0\0$\0m\0o\0n\0o\0n\0o\0k\0i\0 \0N\0\x65\0r\0\x64\0 \0\x46\0o\0n\0t@\"\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
@@ -19,7 +19,7 @@ gui_effects=@Invalid()
 keyboard_scheme=2
 menus_have_icons=true
 show_shortcuts_in_context_menus=true
-stylesheets=/usr/share/qt5ct/qss/fusion-fixes.qss
+stylesheets=@Invalid()
 toolbutton_style=4
 underline_shortcut=1
 wheel_scroll_lines=3
@@ -28,7 +28,7 @@ wheel_scroll_lines=3
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x3p\0\0\0\xc1\0\0\x5\xe8\0\0\x2\xd3\0\0\x3q\0\0\0\xc2\0\0\x5\xe7\0\0\x2\xd2\0\0\0\0\0\0\0\0\a\x80\0\0\x3q\0\0\0\xc2\0\0\x5\xe7\0\0\x2\xd2)
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x3\xc7\0\0\x2\x63\0\0\ar\0\0\x4\xa1\0\0\x3\xca\0\0\x2\x66\0\0\ao\0\0\x4\x9e\0\0\0\0\0\0\0\0\a\x80\0\0\x3\xca\0\0\x2\x66\0\0\ao\0\0\x4\x9e)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x3\xc7\0\0\0$\0\0\ar\0\0\x4*\0\0\x3\xca\0\0\0'\0\0\ao\0\0\x4'\0\0\0\0\0\0\0\0\a\x80\0\0\x3\xca\0\0\0'\0\0\ao\0\0\x4')
 
 [Troubleshooting]
 force_raster_widgets=1
