script and minor changes

--- a/config/flameshot/flameshot.ini
+++ b/config/flameshot/flameshot.ini
@@ -1,6 +1,6 @@
 [General]
 contrastOpacity=188
-drawColor=#bf616a
+drawColor=#000000
 saveAfterCopy=true
 savePath=/home/mh/screenshots
 showHelp=false
