--- a/config/flameshot/flameshot.ini
+++ b/config/flameshot/flameshot.ini
@@ -1,6 +1,6 @@
 [General]
 contrastOpacity=188
-drawColor=#000000
+drawColor=#d22d2d
 saveAfterCopy=true
 savePath=/home/mh/screenshots
 showHelp=false
