--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -208,8 +208,8 @@ detect-client-opacity = false
 # Unredirect all windows if a full-screen opaque window is detected,
 # to maximize performance for full-screen windows. Known to cause flickering
 # when redirecting/unredirecting windows.
-#
-# unredir-if-possible = false
+
+unredir-if-possible = true
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
